2005/08/23 00:45 (-0400) muppetman

	* README, Print.pm: update to version 0.951.

	* xs/GnomePrintPaper.xs: fix compile bug.

2005/08/13 01:03 (+0100) ebassi

	* README, NEWS, Print.pm: update to version 0.95.
	
	* xs/GnomePrintConfig.xs: wrapped Gnome2::Print::Config::set, which
	was left not bound.

	* t/01.GnomePrintConfig.t: test Gnome2::Print::Config::set.

	* xs/GnomePrintPaper.xs: change the Gnome2::Print::Paper wrapper into
	a blessed reference.

	* t/08.GnomePrintPaper.t: test Gnome2::Print::Paper name.

2004/10/24 11:55 (-0400) rwmcfa1

	* MANIFEST.SKIP: updates

	* perl-Gnome2-Print.spec.in: new scheme that addresses x86_64 problems
	found by Carl Nygard

2004/07/05 23:32 (+0200) ebassi
	
	A t/08.GnomePrintPaper.t
	
	* xs/GnomePrintPaper.xs: fixed my stupid cut'n'paste typo for
	gnome_print_paper_get_by_name (patch by Torsten Schoenfeld). Also
	fixed the other class methods.
	
	* t/08.GnomePrintPaper.t: added a test case for the
	Gnome2::Print::Paper object.

	* Print.pm, NEWS, README: new release: 0.94

2004/07/04 22:40 (+0200) ebassi

	A AUTHORS
	A NEWS
	
	* Print.pm, NEWS, README: new release: 0.93

2004/07/04 21:41 (+0200) ebassi
	
	A copyright.pod
	A gnomeprint.typemap
	A doctypes
	
	* Makefile.PL: update required versions for ExtUtils::*; update the
	maps list.

	* xs/GnomePrintPaper.xs: implemented:
		gnome_print_paper_get_default
		gnome_print_paper_by_name
		gnome_print_paper_get_by_size
		gnome_print_paper_get_closest_by_size
		gnome_print_paper_get_list
	GnomePrintPaper is an unregistered boxed type; in perl it's an
	hashref.

2004/05/29 01:38 (+0100) ebassi
	
	* Print.pm, README: new release: 0.92.
	* Makefile.PL: update required version for Glib and Gtk to >= 1.04.

2004/05/27 17:22 (+0100) ebassi
	
	* Makefile.PL: remove dependency on Gnome2 and Gnome2::VFS modules.
	* xs/GnomePrint2.xs: remove the gnome2perl.h include.

2004/03/14 23:55 (+0100) ebassi

	* xs/GnomePrint2.xs
	t/00.GnomePrint.t: Adapt to the new version information